--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header><prev><h1>Who is Anshu Kumar Gupta?</h1>
-    <img src="/anshuPotfolio/Photo.png" alt="User photo" width="80"></img>
+    <img src="Photo.png" alt="User photo" width="80"></img>
     </prev></header>
     
     <hr/>
