--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     
     <hr/>
 
-    <body><h2><a href="/Education.html" target="_blank">Education</a></h2>
+    <body><h2><a href="Education.html" target="_blank">Education</a></h2>
         <hr/>
-        <h2><a href="/Experience.html"target="_blank">Experience</a></h2>
+        <h2><a href="Experience.html"target="_blank">Experience</a></h2>
         <hr/>
-        <h2><a href="/Projects.html"target="_blank">Projects</a></h2>
+        <h2><a href="Projects.html"target="_blank">Projects</a></h2>
         <hr/>
         <h2><a href="https://drive.google.com/drive/u/0/folders/18TxXPBOGHwseE5v6MvIcKqy3FTuAJ0XA"target="_blank">Achievements</a></h2></body>
 <hr/>
