--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
         </h2></div>
     <hr></hr>
-    <h3><a href="/contactMeForm.html" target="_main">Click here to fill the Query cum contact Form.
+    <h3><a href="anshuPortfolio/contactMeForm.html" target="_main">Click here to fill the Query cum contact Form.
     </a></h3>
     <hr></hr>
     <footer><h3> Thank you for visiting.</h3></footer>
