--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <hr/>
 
-    <body><h2><a href="Education.html" target="_blank">Education</a></h2>
+    <body><h2><a href="anshuPortfolio/Education.html" target="_blank">Education</a></h2>
         <hr/>
         <h2><a href="anshuPortfolio/Experience.html"target="_blank">Experience</a></h2>
         <hr/>
