--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     
     <hr/>
 
-    <body><h2><a href="anshuPortfolio/Education.html" target="_blank">Education</a></h2>
+    <body><h2><a href="Education.html" target="_blank">Education</a></h2>
         <hr/>
-        <h2><a href="anshuPortfolio/Experience.html"target="_blank">Experience</a></h2>
+        <h2><a href="Experience.html"target="_blank">Experience</a></h2>
         <hr/>
-        <h2><a href="anshuPortfolio/Projects.html"target="_blank">Projects</a></h2>
+        <h2><a href="Projects.html"target="_blank">Projects</a></h2>
         <hr/>
         <h2><a href="https://drive.google.com/drive/u/0/folders/18TxXPBOGHwseE5v6MvIcKqy3FTuAJ0XA"target="_blank">Achievements</a></h2></body>
 <hr/>
@@ -43,7 +43,7 @@
             
         </h2></div>
     <hr></hr>
-    <h3><a href="anshuPortfolio/contactMeForm.html" target="_main">Click here to fill the Query cum contact Form.
+    <h3><a href="contactMeForm.html" target="_main">Click here to fill the Query cum contact Form.
     </a></h3>
     <hr></hr>
     <footer><h3> Thank you for visiting.</h3></footer>
