--- a/contactMeForm.html
+++ b/contactMeForm.html
@@ -52,8 +52,8 @@
 <label for="3"><input type="radio" name="rating" id="3">✨✨✨</label>
 <label for="4"><input type="radio" name="rating" id="4">✨✨✨✨</label>
 <label for="5"><input type="radio" name="rating" id="5">✨✨✨✨✨</label>
-    </br>
-        <input type="submit" value="submit">
+   </br></br>
+<input type="submit" value="Click here to submit.">
     </br></br>
     <hr/>
 
