--- a/contactMeForm.html
+++ b/contactMeForm.html
@@ -10,7 +10,7 @@
         <h1>Query cum Contact Form</h1>
         <h3>Fill this form for any query.</h3>
     </header>
-    <main><form action="/action.php">
+    <main><form action="https://formsubmit.co/anishagupta131@gmail.com" method="POST">
      <input type="text" placeholder="Enter Your Name">
     </br></br>
      <hr/>
