--- a/contactMeForm.html
+++ b/contactMeForm.html
@@ -11,13 +11,13 @@
         <h3>Fill this form for any query.</h3>
     </header>
     <main><form action="https://formsubmit.co/anishagupta131@gmail.com" method="POST">
-     <input type="text" placeholder="Enter Your Name">
+     <input type="text" name="Name of the User"  placeholder="Enter Your Name">
     </br></br>
      <hr/>
      <h3>Who you are?</h3>
-     <label for="id1"><input type="radio" value="Recruiter" name="class"  id="id1"> Recruiter</label>
-     <label for="id2"><input type="radio" value="Learner" name="class" id="id2">Learner</label>
-     <label for="id3"><input type="radio" value="Collabarator" name="class" id="id3">Collabarator</label>
+     <label for="id1"><input type="radio" value="Recruiter" name="Designation"  id="id1"> Recruiter</label>
+     <label for="id2"><input type="radio" value="Learner" name="Designation" id="id2">Learner</label>
+     <label for="id3"><input type="radio" value="Collabarator" name="Designation" id="id3">Collabarator</label>
     </br></br>
      <hr/>
     </br>
@@ -27,9 +27,8 @@
         <option value="UAE">UAE</option>
         <option value="Germany">Germany</option>
         <option value="Other">Other</opion></select>
-    <input type="text" placeholder="Enter Your Email id">
-    
-    <input type="text" placeholder="Enter Your Contact No.">
+    <input type="email" name="Email Id" placeholder="Enter Your Email id">
+    <input type="tel" name="Contact No." placeholder="Enter Your Contact No.">
 </br></br>
 <hr/>
 </br>
@@ -38,7 +37,7 @@
 <hr/>
 </br>
 <h3>From where you came to know about me or my website?</h3>
-<select ><option>Linkedin</option>
+<select name="From where User came to know about Your website?"><option>Linkedin</option>
     <option>facebook</option>
     <option>Instagram</option>
     <option>from friend</option>
@@ -47,12 +46,12 @@
 <hr/>
 </br>
 <h3>Please provide your valuable rating for this form😍</h3>
-<label for="1"><input type="radio" id="1" name="rating">✨</label>
-<label for="2"><input type="radio" name="rating" id="2">✨✨</label>
-<label for="3"><input type="radio" name="rating" id="3">✨✨✨</label>
-<label for="4"><input type="radio" name="rating" id="4">✨✨✨✨</label>
-<label for="5"><input type="radio" name="rating" id="5">✨✨✨✨✨</label>
-   </br></br>
+<label for="1"><input type="radio" value="✨" id="1" name="Rating">✨</label>
+<label for="2"><input type="radio" value="✨✨" name="Rating" id="2">✨✨</label>
+<label for="3"><input type="radio"  value="✨✨✨" name="Rating" id="3">✨✨✨</label>
+<label for="4"><input type="radio" value="✨✨✨✨" name="Rating" id="4">✨✨✨✨</label>
+<label for="5"><input type="radio" value="✨✨✨✨✨" name="Rating" id="5">✨✨✨✨✨</label>
+</br></br>
 <input type="submit" value="Click here to submit.">
     </br></br>
     <hr/>
