--- a/contactMeForm.html
+++ b/contactMeForm.html
@@ -11,7 +11,7 @@
         <h3>Fill this form for any query.</h3>
     </header>
     <main><form action="https://formsubmit.co/anishagupta131@gmail.com" method="POST">
-     <input type="text" name="Name of the User"  placeholder="Enter Your Name">
+     <input type="text" name="Name of the User"  placeholder="Enter Your Name" required>
     </br></br>
      <hr/>
      <h3>Who you are?</h3>
@@ -27,21 +27,21 @@
         <option value="UAE">UAE</option>
         <option value="Germany">Germany</option>
         <option value="Other">Other</opion></select>
-    <input type="email" name="Email Id" placeholder="Enter Your Email id">
-    <input type="tel" name="Contact No." placeholder="Enter Your Contact No.">
+    <input type="email" name="Email Id" placeholder="Enter Your Email id" required>
+    <input type="tel" name="Contact No." placeholder="Enter Your Contact No." required>
 </br></br>
 <hr/>
 </br>
-    <textarea name="Query" rows="5" cols="50"  id="Query" placeholder="Please write your Query here."></textarea>
+    <textarea name="Query" rows="5" cols="50"  id="Query" placeholder="Please write your Query here." required></textarea>
 </br></br>
 <hr/>
 </br>
 <h3>From where you came to know about me or my website?</h3>
 <select name="From where User came to know about Your website?"><option>Linkedin</option>
-    <option>facebook</option>
-    <option>Instagram</option>
-    <option>from friend</option>
-    <option>others</option></select>
+    <option value="facebook">facebook</option>
+    <option value="Instagram">Instagram</option>
+    <option value="from friend">from friend</option>
+    <option value="others">others</option></select>
 </br></br>
 <hr/>
 </br>
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
