--- a/contactMeForm.html
+++ b/contactMeForm.html
@@ -11,6 +11,9 @@
         <h3>Fill this form for any query.</h3>
     </header>
     <main><form action="https://formsubmit.co/anishagupta131@gmail.com" method="POST">
+        <input type="hidden" name="_subject" value="New Query from your website">
+        <input type="hidden" name="_cc" value="email">
+        <input type="hidden" name="_next" value="https://anshu9862.github.io/anshuPortfolio/">
      <input type="text" name="Name of the User"  placeholder="Enter Your Name" required>
     </br></br>
      <hr/>
@@ -27,12 +30,12 @@
         <option value="UAE">UAE</option>
         <option value="Germany">Germany</option>
         <option value="Other">Other</opion></select>
-    <input type="email" name="Email Id" placeholder="Enter Your Email id" required>
+    <input type="email" name="email" placeholder="Enter Your Email id" required>
     <input type="tel" name="Contact No." placeholder="Enter Your Contact No." required>
 </br></br>
 <hr/>
 </br>
-    <textarea name="Query" rows="5" cols="50"  id="Query" placeholder="Please write your Query here." required></textarea>
+    <textarea name="message" rows="5" cols="50"  id="Query" placeholder="Please write your Query here." required></textarea>
 </br></br>
 <hr/>
 </br>
@@ -52,7 +55,7 @@
 <label for="4"><input type="radio" value="✨✨✨✨" name="Rating" id="4">✨✨✨✨</label>
 <label for="5"><input type="radio" value="✨✨✨✨✨" name="Rating" id="5">✨✨✨✨✨</label>
 </br></br>
-<input type="submit" value="Click here to submit.">
+<button type="submit">Click here to submit</button>
     </br></br>
     <hr/>
 
