--- a/contactMeForm.html
+++ b/contactMeForm.html
@@ -12,7 +12,7 @@
     </header>
     <main><form action="https://formsubmit.co/anishagupta131@gmail.com" method="POST">
         <input type="hidden" name="_subject" value="New Query from your website">
-        <input type="hidden" name="_cc" value="email">
+        <input type="hidden" name="_autoresponse" value="Thank you for filling the Form. We will get back to you as soon as possible.">
         <input type="hidden" name="_next" value="https://anshu9862.github.io/anshuPortfolio/">
      <input type="text" name="Name of the User"  placeholder="Enter Your Name" required>
     </br></br>
